--- a/configs/pico-imx6ul-nand_defconfig
+++ b/configs/pico-imx6ul-nand_defconfig
@@ -1,6 +1,5 @@
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/technexion/pico-imx6ul-nand/imximage.cfg,MX6UL,SYS_BOOT_NAND"
+CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/imx-common/spl_nand.cfg,MX6UL,SYS_BOOT_NAND"
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
+CONFIG_SPL=y
 CONFIG_TARGET_PICO_IMX6UL_NAND=y
-CONFIG_DM=y
-CONFIG_DM_THERMAL=y
